--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,45 +1,203 @@
 /*
  DOCTYPE CSS
+
+  Wedding colors:
+	Dark Blue (#00004d)
+	Yellow (#ffcc00)
+	Silver (#c0c0c0)
+	Black (#000000)
 */
 
 /*Custom tag styles*/
 #main {
 width: 1000px; 
 height: 600px; 
-background: #ffab19;
+background: #ffcc00;
 margin: 25px auto;
-border: solid 2px #ff3819;
-padding: 10px;
+border: solid 5px #c0c0c0;
+padding: 10px;}
+
+/*Top navigation bar*/
+.navBar_Container{
+    width: 100%;
+    height: 5%;
+    padding-top: 10px;
+    margin: 0 auto;
+    background: #c0c0c0;
+}
+
+nav{
+    float: center;
+}
+
+nav ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+nav li{
+    display: inline-block;
+    padding-left: 50px;
+    padding-right: 50px;
+    position: relative;
+}
+
+nav a{
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 300;
+}
+
+nav a:hover{
+    color: white;
+}
+
+nav a::before{
+    content: '';
+    display: block;
+    height: 2.5px;
+    width: 0%;
+    background: black;
+
+    transition: all ease-in-out 250ms;
+}
+
+nav a:hover::before{
+    width: 100%;
 }
 
 /*Base HTML tag styles*/
+h2{
+    font-weight: 300;
+}
+
 body { 
-background: #196dff; 
+background: #00004d; 
 text-align: center;}
 
 h1 {
 text-align: center;
 font-family: "Times New Roman";
 font: 24pt;
-color: #ff3819;
+color: #000000;
 }
 
 h2 {
 text-align: center;
 font-family: "Times New Roman";
 font: 18pt;
-color: #ff3819;
+color: #000000;
 }
 
 hr {
 height: 2px;
-color: #ff3819;
+color: #000000;
 }
 
 p {
+    font-weight: 300;
 font-family: "Calibri";
 font-size: 12pt;
 text-align: left;
 text-indent: 48px;
-color: #2f2d2d;
+color: #000000;
 }
+
+/* Example code for some neat features
+.Boxes{
+    display:grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 1em;
+    justify-items: stretch;
+    align-items:stretch;
+}
+
+.Boxes > div{
+background: #ffab19;
+padding: 1em;
+border: solid 2px #ff3819;
+}
+
+.Boxes > div:nth-child(odd){
+background: #196dff;
+}
+
+.box1{
+grid-column: 1/3;
+grid-row: 1/3;
+}
+
+.box2{
+grid-column: 3;
+grid-row: 1/3;
+}
+
+.box3{
+grid-column: 2/4;
+grid-row: 3;
+}
+
+.box4{
+grid-column: 1;
+grid-row: 2/4;
+}
+
+.nested{
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 70px;
+    grid-gap: 1em;
+}
+
+.Grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1em;
+    grid-auto-rows: 100px;
+    grid-auto-rows: minmax(100px, auto);
+}
+
+.Grid > div{
+background: #ffab19;
+padding: 1em;
+border: solid 2px #ff3819;
+}
+
+.Grid > div:nth-child(odd){
+background: #196dff;
+}
+
+.nested > div{
+    background: #ff3819;
+    border: #333 1px solid;
+    padding: 1em;
+}
+
+.Test_Grid{
+display:grid;
+grid-template-columns: 70% 30%;
+grid-column-gap: 1em;
+grid-row-gap: 1em;
+grid-gap: 1em;
+}
+
+.Test_Grid > p{
+    background: #196dff;
+    border: solid 2px #ff3819;
+}
+
+.Test_Grid > div{
+background: #ffab19;
+padding: 1em;
+border: solid 2px #ff3819;}
+
+.Test_Grid > div:nth-child(odd){
+    background: #2f2d2d;
+}
+
+*/
