--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,12 +10,15 @@
 
 /*Custom tag styles*/
 #main {
-width: 1000px; 
-height: 600px; 
-background: #ffcc00;
-margin: 25px auto;
-border: solid 5px #c0c0c0;
-padding: 10px;}
+    width: 1000px; 
+    height: 600px; 
+    background: #ffcc00;
+    opacity: 0.8;
+    filter: alpha(opacity=80%);
+    margin: 25px auto;
+    border: solid 5px #c0c0c0;
+    padding: 10px;
+}
 
 /*Top navigation bar*/
 .navBar_Container{
@@ -75,35 +78,40 @@ h2{
 }
 
 body { 
-background: #00004d; 
-text-align: center;}
+    background: #00004d;
+    background-image: url("../Images/JaredAndSarah.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 80%;
+    text-align: center;
+}
 
 h1 {
-text-align: center;
-font-family: "Times New Roman";
-font: 24pt;
-color: #000000;
+    text-align: center;
+    font-family: "Times New Roman";
+    font: 24pt;
+    color: #000000;
 }
 
 h2 {
-text-align: center;
-font-family: "Times New Roman";
-font: 18pt;
-color: #000000;
+    text-align: center;
+    font-family: "Times New Roman";
+    font: 18pt;
+    color: #000000;
 }
 
 hr {
-height: 2px;
-color: #000000;
+    height: 2px;
+    color: #000000;
 }
 
 p {
     font-weight: 300;
-font-family: "Calibri";
-font-size: 12pt;
-text-align: left;
-text-indent: 48px;
-color: #000000;
+    font-family: "Calibri";
+    font-size: 12pt;
+    text-align: left;
+    text-indent: 48px;
+    color: #000000;
 }
 
 /* Example code for some neat features
