--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@
 #main {
     width: 1000px; 
     height: 600px; 
-    background: #ffcc00;
+    background: #ffff99;
     opacity: 0.8;
     filter: alpha(opacity=80%);
     margin: 25px auto;
@@ -70,6 +70,34 @@ nav a::before{
 
 nav a:hover::before{
     width: 100%;
+}
+
+/*Count down timer*/
+#countDown{
+    background:#00004d;
+    border: solid 2px #c0c0c0;
+    color: #c0c0c0;
+    display: inline-block;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 100;
+}
+
+#countDown > div{
+    padding: 10px;
+    border-radius: 3px;
+    display: inline-block;
+}
+
+#countDown div > span{
+    padding: 15px;
+    border-radius: 3px;
+    display: inline-block;
+}
+
+.smalltext{
+    padding-top: 5px;
+    font-size: 16px;
 }
 
 /*Base HTML tag styles*/
